# micro-idle

./: .gitignore  ARCHITECTURE.MD  CMakeLists.txt  ECM_amoeba_summary.txt  PLAN.md  README.md  engine.c.gcov  game.c.gcov  gpu_sim.c.gcov  rg  rng.c.gcov  time.c.gcov
.cache/clangd/index/: engine.c.2988EC140DC0460B.idx  engine.h.02040DF786BF2424.idx  game.c.C8AF407ED6862788.idx  game.h.5CA30B7DA4703A7E.idx  gpu_sim.c.F18053FFB1C4D8EF.idx  gpu_sim.h.AD1EEEC497904A2D.idx  main.c.02D830FBA53012F9.idx  rng.c.AA101E4BF6801104.idx  rng.h.C106DD77C4C38C5C.idx  sim_collide.spv.h.89E28F7CB8FC598D.idx  sim_insert.spv.h.E2B9C6E74FEA3E2E.idx  test_engine.c.53DBBB235DF42108.idx  test_game.c.6DA17C33310BACFB.idx  test_game_constants.c.0B521AE4326F4AB7.idx  test_gpu_sim.c.D0A62DE99C74CDC7.idx  test_main.c.9FB4CCAF18C82781.idx  test_render_output.c.4801A5A82CD550D0.idx  test_rng.c.365D36256998019B.idx  test_time.c.8F5903964C916EA9.idx  time.c.8191057755A9827A.idx  time.h.2816A938ECE03468.idx  vk_compute.c.69E3C2879BB1A176.idx  vk_compute.h.5D2CDFB85E0EF75F.idx  xpbd.c.60315648D5ECD1C8.idx  xpbd.h.604BEF4D4C4927AC.idx
apps/game/: main.c
apps/tests/: test_game_constants.c  test_main.c  test_rng.c  test_time.c
build_native/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  tests-88df431_include.cmake  tests-88df431_tests.cmake
build_native/JoltBuild/: CTestTestfile.cmake  JoltConfig.cmake  Makefile  cmake_install.cmake
data/shaders/: metaball.frag  metaball.vert  metaball_field.frag  metaball_field.vert  metaball_surface.frag  metaball_surface.vert  microbe.frag  microbe.vert  outline.frag  outline.vert  outline_curve.vert  particle_simple.frag  particle_simple.vert  sdf_membrane.frag  sdf_membrane.vert  sim_collide.comp  sim_collide.spv  sim_collide_vk.comp  sim_insert.comp  sim_insert.spv  sim_insert_vk.comp  xpbd_bounds.comp  xpbd_collide.comp  xpbd_finalize.comp  xpbd_grid_insert.comp  xpbd_microbe.frag  xpbd_microbe.vert  xpbd_microbe_update.comp  xpbd_predict.comp  xpbd_pressure.comp  xpbd_solve.comp
engine/: engine.c  engine.h  time.c
engine/platform/: engine.cpp  engine.h  time.cpp  time.h
engine/util/: rng.c  rng.h
game/: game.c  game.cpp  game.h  gpu_sim.c  gpu_sim.h  microbe_bodies.cpp  microbe_bodies.h  physics.cpp  physics.h  sim_collide.spv.h  sim_insert.spv.h  vk_compute.c  vk_compute.h  xpbd.c  xpbd.cpp  xpbd.h
shaders/: sdf_membrane.frag  sdf_membrane.vert
src/: SpawnRequest.h  World.cpp  World.h
src/components/: ECMLocomotion.h  Input.h  Microbe.h  Physics.h  Rendering.h  Resource.h  Transform.h  WorldState.h
src/math/: Quat.h  Random.cpp  Random.h  Vec3.h
src/physics/: Constraints.cpp  Constraints.h  Icosphere.cpp  Icosphere.h
src/rendering/: RaymarchBounds.cpp  RaymarchBounds.h  SDFShader.cpp  SDFShader.h
src/systems/: DestructionSystem.cpp  DestructionSystem.h  ECMLocomotionSystem.cpp  ECMLocomotionSystem.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  ResourceSystem.cpp  ResourceSystem.h  SDFRenderSystem.cpp  SDFRenderSystem.h  SoftBodyFactory.cpp  SoftBodyFactory.h  SpawnSystem.cpp  SpawnSystem.h  TransformSyncSystem.cpp  TransformSyncSystem.h  UpdateSDFUniforms.cpp  UpdateSDFUniforms.h
tests/: test_constraints.cpp  test_deflation.cpp  test_ecm_locomotion.cpp  test_engine.c  test_engine.cpp  test_env.h  test_flecs_reset.cpp  test_game.c  test_game_constants.c  test_game_constants.cpp  test_game_render.cpp  test_gpu_sim.c  test_icosphere.cpp  test_main.c  test_main.cpp  test_microbe_integration.cpp  test_microbe_persistence.cpp  test_microbe_position_persistence.cpp  test_microbe_positions.cpp  test_microbe_spawn_accumulation.cpp  test_physics_bullet.cpp  test_render_output.c  test_rendering_debug.cpp  test_rng.cpp  test_sdf_render_system.cpp  test_softbody_factory.cpp  test_spawn_positions.cpp  test_time.c  test_time.cpp  test_visual.c  test_visual.cpp
